# comfyui-image-frontend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  comfyui-image-frontend-community-workflow-conversion-playbook.md  compose.example.yml  pyproject.toml  update_and_restart
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 19a5fe877349_initial_schema.py  4f2a8c1d9e70_add_generation_progress_snapshot.py  7c9b2d4e6f81_add_favorites.py  a8d4e6f2c901_add_generation_timing_profiles.py  b84f2d6a91c3_add_published_source_results.py  e52a8c1f4b90_add_generation_source_ratings.py
backend/app/: __init__.py  __main__.py  config.py  container.py  db.py  dependencies.py  errors.py  main.py  models.py  schemas.py  security.py
backend/app/api/: __init__.py  admin.py  auth.py  events.py  favorites.py  generations.py  preferences.py  prompt_assistant.py  speech_to_text.py  uploads.py  workflows.py
backend/app/domain/: compiler.py  contract.py  publication.py  results.py  source_metadata.py  status.py
backend/app/services/: assets.py  auth.py  comfyui.py  event_broker.py  events.py  generation_eta.py  generations.py  ollama.py  queue_worker.py  speech_to_text.py  user_deletion.py  workflow_registry.py
backend/tests/: __init__.py  conftest.py  e2e_server.py  fake_services.py  helpers.py  publication_fixtures.py
backend/tests/integration/: test_auth_accounts.py  test_authorization_and_uploads.py  test_dispatcher_resilience.py  test_gallery_query_performance.py  test_gallery_recall_preferences.py  (+8 more)
docs/: api.md  architecture.md  database.md  implementation-brief.md  migration-published-workflows.md  normative-product-requirements-v1.0.md  normative-workflow-contract-v1.1.md  published-workflows.md  testing.md  traceability.md
frontend/: index.html  package.json  playwright.config.mjs
frontend/e2e/: principal-journeys.spec.mjs
frontend/scripts/: build.mjs  format-check.mjs  lint.mjs
frontend/src/: api.mjs  app.mjs  lib.mjs  render.mjs  styles.css
frontend/test/: api.test.mjs  lib.test.mjs  render.test.mjs
scripts/: container-smoke.sh  generate_traceability.py  validate.sh
(+14 files in other folders)
