[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-image-frontend"
version = "0.1.0"
description = "Private, contract-driven ComfyUI image generation appliance"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0.36,<3",
  "alembic>=1.14,<2",
  "pydantic-settings>=2.7,<3",
  "argon2-cffi>=23.1,<26",
  "httpx>=0.28,<1",
  "websockets>=14,<16",
  "python-multipart>=0.0.20,<1",
  "pillow>=11,<13",
  "jsonschema>=4.23,<5",
  "orjson>=3.10,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "asgi-lifespan>=2.1,<3",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-pillow>=10.2,<11",
  "build>=1.2,<2",
  "setuptools>=75",
  "wheel>=0.45,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "asgi-lifespan>=2.1,<3",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "types-pillow>=10.2,<11",
  "build>=1.2,<2",
  "setuptools>=75",
  "wheel>=0.45,<1",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: integration tests",
  "live: tests requiring live external services",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["backend/app"]
exclude = ["backend/alembic"]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["PIL.*", "jsonschema.*"]
ignore_missing_imports = true
